XMLtoCSV/objects/unpackaged/objects/Clm_Presentation_vod__c.object
<CustomObject>
    <description>Closed Loop Marketing presentations.</description>
    <fields>
        <fullName>Approved_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the presentation has been reviewed and approved so that it can be migrated</description>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Visibility_vod__c</fullName>
        <description>If Product is selected, then Detail Group field is ignored when determining CLM content visibility.  If Detail Group is selected, then Product field is ignored when determining CLM content visibility.</description>
        <label>Control Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Product_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail_Group_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Copied_From_vod__c</fullName>
        <description>Populated with the 18 digit org ID from which this presentation was copied. If the presentation was created in the current org, this field is blank</description>
        <label>Copied From</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Date_vod__c</fullName>
        <description>Populated with the Date and Time when the presentation record was copied from a different org.</description>
        <label>Copied On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Default_Presentation_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this presentation is the default presentation for the associated product.</description>
        <label>Default Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Contains the description of the CLM Presentation.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Directory_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to reference what directory the Presentation is in.</description>
        <label>Directory</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Directory record must have Record Type = CLM_vod</errorMessage>
            <filterItems>
                <field>Directory_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>CLM_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Directory_vod__c</referenceTo>
        <relationshipLabel>CLM Presentations</relationshipLabel>
        <relationshipName>CLM_Presentations_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Enable_Survey_Overlay_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the survey associated to the presentation to appear in the CRM overlay.</description>
        <label>Enable Survey Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>Date when the presentation is made unavailable for users to record calls against.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Content_vod__c</fullName>
        <description>Used to store the content type.</description>
        <label>Event Content</label>
        <picklist>
            <picklistValues>
                <fullName>Events_Only_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events_CLM_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this presentation is not shown in the CLM Presentations view and does not appear in the presentation picker.</description>
        <label>Hidden?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indication1__c</fullName>
        <label>Indication</label>
        <picklist>
            <picklistValues>
                <fullName>CLL/SLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Indication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MZL</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keywords_vod__c</fullName>
        <description>Comma separated keywords of the CLM Presentation.</description>
        <label>Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Original_Record_ID_vod__c</fullName>
        <description>Populated with the 18 digit SFDC ID in the source org for this presentation.</description>
        <label>Original Record ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare Professional Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slide Decks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMBRUVICA Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDMs/FEMs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Trial Cards</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Share_To__c</fullName>
        <description>To share presentations with the appropriate user group</description>
        <label>Share To</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSL and CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE, FAE and RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE and FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAE and RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales, RAM, NAE and FAE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales and RAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ParentId_vod__c</fullName>
        <description>Parent Id of the presentation.</description>
        <label>Parent Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentation_Id_vod__c</fullName>
        <description>Exploria Id of the presentation.</description>
        <externalId>true</externalId>
        <label>Presentation Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product associated with this presentation.</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>CLM_Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Date when the presentation is available for users to record calls against.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the presentation on the CDN. A piece of content will either be &apos;Approved&apos;, &apos;Staged&apos;, or &apos;Expired&apos;</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate the survey lookup if the CLM presentation will reference surveys.</description>
        <label>Survey</label>
        <referenceTo>Survey_vod__c</referenceTo>
        <relationshipLabel>Presentations</relationshipLabel>
        <relationshipName>CLM_Presentations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Presentations marked as training content will only be displayed in the media viewer when training mode is enabled.  These presentations will not be available when recording calls.</description>
        <label>Training Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Indicates the type of presentation.  If blank or &quot;HQ&quot;, presentation is defined as one created by Headquarters.  &quot;Custom&quot; indicates a presentation created by an end user.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VExternal_Id_vod__c</fullName>
        <description>External Id used by Veeva CRM.</description>
        <externalId>true</externalId>
        <label>Veeva External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vault_DNS_vod__c</fullName>
        <description>Vault DNS of the document.</description>
        <label>Vault DNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Doc_Id_vod__c</fullName>
        <description>Vault Id of the document.</description>
        <label>Vault Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_External_Id_vod__c</fullName>
        <description>External ID from Vault</description>
        <label>Vault External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_GUID_vod__c</fullName>
        <description>Global Unique Identifier for Vault instance where this document resides.</description>
        <label>Vault GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vault_Last_Modified_Date_Time_vod__c</fullName>
        <description>Last modified date time of the content as reported by Vault.</description>
        <label>Vault Last Modified Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_vod__c</fullName>
        <description>Version of the Vault Document.</description>
        <label>Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Presentation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Training_vod__c</columns>
        <columns>PCYC_Category__c</columns>
        <columns>Indication1__c</columns>
        <columns>PCYC_Share_To__c</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_vod__c</columns>
        <columns>Approved_vod__c</columns>
        <columns>Status_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Content</fullName>
        <columns>NAME</columns>
        <columns>Training_vod__c</columns>
        <columns>PCYC_Category__c</columns>
        <columns>Indication1__c</columns>
        <columns>Approved_vod__c</columns>
        <columns>Presentation_Id_vod__c</columns>
        <columns>Product_vod__c</columns>
        <columns>PCYC_Share_To__c</columns>
        <columns>End_Date_vod__c</columns>
        <columns>Vault_Doc_Id_vod__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approved_vod__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approved Content</label>
        <language>en_US</language>
        <sharedTo>
            <territory>Corp</territory>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Presentations</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>End_Date_After_Start_Date</fullName>
        <active>true</active>
        <description>CLM Presentation end date must be later than start date.</description>
        <errorConditionFormula>End_Date_vod__c  &lt;  Start_Date_vod__c</errorConditionFormula>
        <errorDisplayField>End_Date_vod__c</errorDisplayField>
        <errorMessage>The end date must be later than the start date.</errorMessage>
    </validationRules>
</CustomObject>